# uav

./: .gitignore  CMakeLists.txt
config/: config.ini
csvpath/: total.csv
include/custom/: SqliteOperator.h  ini.h  rotate.h
include/mavlink2.0/common/: common.h  mavlink.h  version.h
include/mavlink2.0/minimal/: mavlink.h  minimal.h  version.h
include/mavlink2.0/standard/: mavlink.h  standard.h  version.h
include/yolo/: infer.hpp
src/: SqliteOperator.cpp  client.cpp  ftpclient.cpp  infer.cu  main.cpp  rotate.cpp  server.cpp  yolo.cu
